<resources>
    <string name="app_name">Medicapp</string>
    <string name="title">MEDICAPP</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="recovery">Recordar Contraseña</string>
    <string name="send"> Continuar</string>
    <string name="password_new">Nueva Contraseña</string>
    <string name="password_confirm">Repetir Contraseña</string>
    <string name="item_profile">Perfil</string>
    <string name="item_diagnostic">Diagnostico</string>
    <string name="item_point">Centros de atención</string>
    <string name="item_food">Control Alimentario</string>
    <string name="item_chat">Chat Medico</string>
    <string name="item_news">Consejos y recomendaciones</string>
    <string name="item_exit">Salir</string>
    <string name="email">Correo</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="dateDiagnostic">Fecha de diagnostico</string>
    <string name="names">Nombres</string>
    <string name="title_activity_principal_patient">PrincipalPatientActivity</string>
    <string name="title_home">Inicio</string>
    <string name="activity_principal">Principal</string>
    <string name="item_chat_nav">Chat</string>
    <string name="item_point_nav">Centros</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="item_search">Buscar</string>
    <string name="report_medic">Reporte Medico</string>
    <string name="add_insul">Registrar insulina</string>
    <string name="add_glucose">Registrar Glucosa</string>
    <string name="add_report">Añadir Reporte</string>
    <string name="quantity">Cantidad</string>
    <string name="item_title">Titulo</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="category">Categoria</string>
    <string name="comment">Comentario</string>
    <string name="mood">Cómo te sientes?</string>
    <string name="add">Añadir</string>
    <string name="update">Actualizar</string>
    <string name="add_recommend">Generar recomendación</string>
    <string name="add_reminder">Generar recordatorio</string>
    <string name="date_start">Fecha Inicio</string>
    <string name="date_end">Fecha Fin</string>
    <string name="day_monday">Lunes</string>
    <string name="day_tuesday">Martes</string>
    <string name="day_wednesday">Miercoles</string>
    <string name="day_thursday">Jueves</string>
    <string name="day_friday">Viernes</string>
    <string name="day_saturday">Sabado</string>
    <string name="day_sunday">Domingo</string>
    <string name="time">Tiempo</string>
    <string name="tip">Consejo</string>
    <string name="title_deport">Actividad fisica Consejos  -  Recomendaciones</string>
    <string name="title_food">Genera tu dieta</string>
    <string name="breakfast">Desayuno</string>
    <string name="lunch">Almuerzo</string>
    <string name="dinner">Cena</string>
    <string name="error_empty">Required</string>
    <string name="error_email">Correo invalido</string>
    <string name="understood">Entendido</string>
    <string name="messageInfo">Por favor valide su usuario y contraseña</string>
    <string name="updateSuccesfull">Actualización exitosa</string>
    <string name="updateError">Error en actualización</string>
    <string name="http_user_agent">Medicapp/1.0</string>
    <string name="mapbox_access_token">ipN4wfYfCP68OzCTP5lI5oPYxZkojdpvciYqY9f1</string>
</resources>