<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistryGlucoseFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="29dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_glucosemeter"
            android:text="@string/add_glucose"
            android:textColor="@color/blue_500"
            android:textSize="32dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/idBarChart"
            android:layout_width="match_parent"
            android:layout_below="@+id/textTitle"
            android:layout_height="240dp" />

        <LinearLayout
            android:id="@+id/layoutData"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idBarChart"
            android:orientation="horizontal" >
            <View
                android:id="@+id/detailRectangle"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_rectangle_two"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/detailsCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/blue_100"
                app:cardElevation="20dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/measureTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="10"
                        app:counterTextAppearance="@style/counterText"
                        app:counterOverflowTextAppearance="@style/counterOverride">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/measureEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textSize="18sp"
                            android:drawableStart="@drawable/ic_measure"
                            android:drawablePadding="5sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:inputType="textPersonName"
                            android:hint="@string/quantity"  />
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="10"
                        android:id="@+id/dateTextInput"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/measureTextInput"
                        app:counterTextAppearance="@style/counterText"
                        app:counterOverflowTextAppearance="@style/counterOverride">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="85dp"
                            android:layout_marginRight="25dp"
                            android:drawableStart="@drawable/ic_calendar_da"
                            android:ems="10"
                            android:hint="@string/date"
                            android:inputType="textPersonName"
                            android:textSize="18sp" />


                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="10"
                        android:id="@+id/timeTextInput"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/dateTextInput"
                        app:counterTextAppearance="@style/counterText"
                        app:counterOverflowTextAppearance="@style/counterOverride">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/timeEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="85dp"
                            android:layout_marginRight="25dp"
                            android:drawableStart="@drawable/ic_time"
                            android:ems="10"
                            android:hint="@string/hour"
                            android:inputType="textPersonName"
                            android:textSize="18sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutData"
            android:background="@color/blue_500"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_add"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</FrameLayout>