<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MedicalDiagnosticFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="29dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/report_medic"
            android:textColor="@color/blue_500"
            android:textSize="32dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/idBarChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/textTitle"
           />

        <TableRow
            android:id="@+id/tableReport1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/idBarChart">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:layout_marginTop="29dp"
                android:drawableStart="@drawable/ic_add"
                android:background="@color/blue_500"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_insul"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/buttonRemember"
                android:layout_width="79dp"
                android:layout_height="50dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="29dp"
                android:layout_toRightOf="@+id/buttonAdd"
                android:src="@drawable/ic_reminder" />
        </TableRow>

        <TableRow
            android:id="@+id/tableReportGluco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tableReport1"
            android:layout_marginLeft="12dp"
            android:gravity="center"
            android:layout_marginTop="39dp">

            <com.ekn.gruzer.gaugelibrary.FullGauge
                android:id="@+id/donut1"
                android:layout_width="110dp"
                android:layout_height="110dp" />

            <com.ekn.gruzer.gaugelibrary.FullGauge
                android:id="@+id/donut2"
                android:layout_width="110dp"
                android:layout_height="110dp" />

            <com.ekn.gruzer.gaugelibrary.FullGauge
                android:id="@+id/donut3"
                android:layout_width="110dp"
                android:layout_height="110dp" />

        </TableRow>

        <Button
            android:id="@+id/buttonAddG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tableReportGluco"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:background="@color/blue_500"
            android:gravity="center"
            android:drawableStart="@drawable/ic_add"
            android:padding="5dp"
            android:text="@string/add_report"
            android:textColor="@android:color/white" />


    </RelativeLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/buttonMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|center"
            android:theme="@style/buttonFloat"
           app:iconTint="@android:color/white"
            app:icon="@drawable/ic_action_menu"/>

    <ImageView
        android:id="@+id/imageFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_c_food_d"
        android:layout_gravity="bottom|left"
        android:layout_margin="16dp" />

    <ImageView
        android:id="@+id/imageSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_c_exercise"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp" />

</FrameLayout>